# ROBO-666

./: .gitignore  README.md
bash_scripts/: launch_cameras.bash  launch_chatter.bash  launch_grasp_pose_detector.bash  launch_object_detectors.bash  launch_soundplay.bash
corob_2024/: README.md
corob_2024/src/chatter_server/: CMakeLists.txt  README.md  package.xml  setup.py
corob_2024/src/chatter_server/launch/: chatter.launch
corob_2024/src/chatter_server/srv/: ConfirmTarget.srv  Feedback.srv  (+2 more)
corob_2024/src/fusion/: CMakeLists.txt  README.md  package.xml
corob_2024/src/fusion/action/: Give.action  Move.action
corob_2024/src/fusion/include/behaviortree_ros/: bt_action_node.h  bt_custom_register.h  bt_service_node.h
corob_2024/src/fusion/include/fusion_tree/: feedback_action_node.cpp  feedback_action_node.h  fusion_tree.cpp  fusion_tree.h  test_class.cpp  test_class.h
corob_2024/src/fusion/include/fusion_tree/actions/: give_action_client.cpp  give_action_client.h  move_action_client.cpp  move_action_client.h  pick_action_client.cpp  pick_action_client.h  place_action_client.cpp  place_action_client.h  snap_action_client.cpp  snap_action_client.h
corob_2024/src/fusion/include/fusion_tree/conditions/: is_assembly_started.cpp  is_assembly_started.h  is_command.cpp  is_command.h  is_grasping.cpp  is_grasping.h  is_locked.cpp  is_locked.h  is_task_done.cpp  is_task_done.h
corob_2024/src/fusion/include/fusion_tree/services/: confirm_service.cpp  confirm_service.h  confirm_target_service.cpp  confirm_target_service.h  feedback_service.cpp  feedback_service.h  get_task_tools_service.cpp  get_task_tools_service.h  gripper_service.cpp  gripper_service.h  is_fault_service.cpp  is_fault_service.h  is_object_detected_service.cpp  is_object_detected_service.h  list_targets_service.cpp  list_targets_service.h  list_tools_service.cpp  list_tools_service.h  reset_progress_service.cpp  reset_progress_service.h  snap_to_tool_service.cpp  snap_to_tool_service.h  stop_service.cpp  stop_service.h  task_inspection_service.cpp  task_inspection_service.h  task_instructions_service.cpp  task_instructions_service.h  task_progress_service.cpp  task_progress_service.h  verify_task_service.cpp  verify_task_service.h
corob_2024/src/fusion/launch/: fusion_bt.launch  fusion_test.launch
corob_2024/src/fusion/src/: fusion_bt.cpp  fusion_test.cpp
corob_2024/src/fusion/srv/: Confirm.srv  ConfirmTarget.srv  Feedback.srv  Inspection.srv  Interrupt.srv  IsFault.srv  ListTargets.srv  TaskInstructions.srv  TaskProgress.srv  VerifyTask.srv
corob_2024/src/fusion/test/: test_main_tree.cpp  test_pick_subtree.cpp  test_place_subtree.cpp
corob_2024/src/fusion/tree_files/: assembly_tree.xml  fault_tree.xml  give_tree.xml  gripper_tree.xml  help_tree.xml  inspection_tree.xml  instruction_tree.xml  lock_to_location_tree.xml  lock_to_object_tree.xml  main_assembly_tree.xml  main_tree.xml  move_tree.xml  pick_tool_tree.xml  pick_tree.xml  place_tree.xml  snap_to_direction_tree.xml  snap_to_location_tree.xml  snap_to_object_tree.xml  start_tree.xml  test_tree.xml
corob_2024/src/fusion_control/: CMakeLists.txt  README.md  package.xml  setup.py
corob_2024/src/fusion_control/action/: Pick.action
corob_2024/src/fusion_control/launch/: control.launch
corob_2024/src/fusion_control/src/fusion_control_main/: __init__.py  fusion_control_node
corob_2024/src/fusion_control/src/fusion_control_main/fusion_control_lib/: controller.py  controller_cli.py  controller_srv.py  give_action_srv.py  grasp_client.py  move_action_srv.py  move_it_action_with_steps.py  pick_action_srv.py  place_action_srv.py
corob_2024/src/json_files/: commands.json  detections.json  fault_detections.json  raw_speech_to_refined_commands.json  targets.json  tasks.json  tools.json
corob_2024/src/snap_to_target/: CMakeLists.txt  README.md  package.xml
corob_2024/src/task_director/: CMakeLists.txt  README.md  package.xml  setup.py
corob_2024/src/task_director/launch/: task_director.launch
corob_2024/src/task_director/src/task_server_main/: __init__.py  task_server
corob_2024/src/task_director/src/task_server_main/task_director_submodules/: __init__.py  json_utils.py  task_detector_buffer.py  task_director.py  task_pipeline.py
corob_2024/src/task_director/srv/: GetTools.srv
corob_2024/src/task_director/test/: test.launch  test_cases.py
object_detection/: README.md
(+48 files in other folders)
