<?xml version="1.0"?>
<package format="2">
  <name>task_director</name>
  <version>1.0.0</version>

  <description>Task Director package</description>
  <maintainer email="noora.sassali@tuni.fi">root</maintainer>>
  <license>Apache License 2.0</license>
  <author email="noora.sassali@tuni.fi">nmksas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-tools</build_depend> 
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
